Added css reset. Changed css structure.

--- a/css/all.css
+++ b/css/all.css
@@ -1,4 +1,1 @@
-@import url("styleGen.css");
-@import url("desktop.css");
-@import url("tablet.css");
-@import url("phone.css");
+@import url("reset.css");
