--- a/css/news.css
+++ b/css/news.css
@@ -2,14 +2,59 @@
  * CSS for a news section
  */
 
+/*html, body {
+	height:100%;
+	background-color: aqua;
+}*/
+
+*{
+	margin:0;
+	padding:0;
+	font-family: Source Sans Pro, sans-serif;
+}
+
+html, body {
+	height: 100%;
+}
+
 body {
  	width: 80%;
- 	padding-left: 10%;
- 	padding-right: 10%;
+ 	margin-left: 10%;
+ 	margin-right: 10%;
+ 	border-right: 1px solid #CCCCCC;
+	border-left: 1px solid #CCCCCC;
 }
 
 body > header {
+	background-color: #666666;
 	text-align: center;
+	color: #fff;
+}
+
+body > main {
+	background-color: #ffffff;
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+body > main > section {
+	height: 100%;
+	width: 70%;
+	float: left;
+	padding: 2%;
+	background-color: #fff;
+}	
+
+
+body > main > aside {
+	/*position: absolute;*/
+	color: #fff;
+	height: 100%;
+	width: 20%;
+	float: right;
+	padding: 3%;
+	background-color: #1A9CB0;
 }
 
 article > header {
@@ -17,23 +62,14 @@ article > header {
 }
 
 article p {
+	font-family: trebuchet, sans-serif;
 	text-indent: 1em;
-}
-
-main {
-	width: 100%;
-}
-
-main > section {
-	width: 70%;
-	float: left;
-}
-
-main > aside {
-	width: 30%;
-	float: right;
 }
 
 section > article > footer > p {
 	text-align: right;
+}
+
+ul {
+	list-style-type: none; 
 }
