--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,1 +1,2 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,300);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
