--- a/css/news.css
+++ b/css/news.css
@@ -18,11 +18,12 @@ html, body {
 }
 
 body {
+	font-family: trebuchet, sans-serif;
  	width: 80%;
  	margin-left: 10%;
  	margin-right: 10%;
- 	border-right: 1px solid #CCCCCC;
-	border-left: 1px solid #CCCCCC;
+ 	/*border-right: 1px solid #CCCCCC;
+	border-left: 1px solid #CCCCCC;*/
 }
 
 body > header {
@@ -40,37 +41,76 @@ body > main {
 
 body > main > section {
 	height: 100%;
-	width: 70%;
+	width: 80%;
 	float: left;
-	padding: 2%;
+	padding: 1%;
 	background-color: #fff;
 }	
 
 
 body > main > aside {
-	/*position: absolute;*/
 	color: #fff;
 	height: 100%;
 	width: 20%;
 	float: right;
-	padding: 3%;
+	padding: 2%;
 	background-color: #1A9CB0;
 }
 
-article > header {
-	padding-left: 20px;
-}
-
-article p {
-	font-family: trebuchet, sans-serif;
-	text-indent: 1em;
-}
-
-section > article > footer > p {
-	text-align: right;
-}
-
 ul {
-	list-style-type: none;
-	color: #fff; 
+	list-style-type: none; 
+}
+
+aside nav a {
+	color: #fff;
+}
+
+#news-tags {
+	margin-top: 10px;
+	background-color: #fff;
+	height: 200px;	
+	color: #000;		
+}
+
+#news-tags header {
+	text-align: center;
+	color: #fff;
+	background-color: #666666;
+}
+
+.news-article {
+	margin: 5px 5px 10px 5px;
+}
+
+.news-article header{
+	background-color: #999999;
+	color: #fff;
+}
+
+.news-article section p {
+	color: #000;
+	padding: 0 5px 0 5px;
+	margin: 5px;
+	border-left: 2px solid #1A9CB0;
+}
+
+.news-article header {
+	padding-left: 10px;
+}
+
+.news-article footer span,time {
+	text-align: left;
+	margin-right: 30px;
+}
+
+.news-article ul li{
+	display: inline;
+}
+
+.news-article ul{
+	display: inline;
+}
+
+.news-article-read-more {
+	
 }
