--- a/css/header.css
+++ b/css/header.css
@@ -1,19 +1,19 @@
-#header *{
+ul{
+    list-style: none;
     margin: 0;
     padding: 0;
 }
+
+/* header styles */
 #header{
     width: 100%;
     background-color: #666;
-}
-#header ul{
-    list-style: none;
 }
 #logo{
     display: block;
     width: 180px;
     height: 60px;
-    background: url('../img/header/cb-logo.png');
+    background: url('../img/cb-logo.png');
     float: left;
     -webkit-transition-duration: .6s;
     -o-transition-duration: .6s;
@@ -21,9 +21,16 @@
     transition-duration: .6s;
 }
 #logo:hover{
-    background: url('../img/header/cb-logo-hover.png');
+    background: url('../img/cb-logo-hover.png');
 }
-#logo a, .search-cart-login-holder>li a, #nav a{
+#logo a{
+    text-indent: -9999px;
+    overflow: hidden;
+    display: block;
+}
+#logo a,
+#nav a,
+.search-cart-login-holder>li a{
     width: 100%;
     height: 100%;
     display: block;
@@ -32,44 +39,56 @@
 #header .wide-wrapper{
     width: 90%;
     min-width: 1024px;
-    margin: auto;
+    margin:0 auto;
 }
 #nav{
     float: left;
     position: relative;
 }
 #nav>li{
+    position: relative;
     float: left;
-    height: 60px;
-    margin: 0 0 0 15px;
-    padding: 10px 0 0;
 }
-#nav>li:hover{
+#nav li:hover{
     background-color: #464547;
-    box-shadow: 0 0 7px #222;
-    -webkit-transition-duration: .4s;
-    -o-transition-duration: .4s;
-    -moz-transition-duration: .4s;
-    transition-duration: .4s;
 }
-#nav>li a:hover{
+#nav li a:hover{
     color: #39C2D7;
     text-decoration: none;
 }
+#nav li:hover li a:hover,
+#nav li:hover a{
+    color: #39C2D7;
+}
+#nav li:hover li a{
+    color: #ccc;
+}
 #nav li ul{
+    visibility:hidden;
+    opacity:0;
     position: absolute;
-    display: none;
+    top: 100%;
+    left: 0;
+    width: 100%;
+
+    transition:visibility 0.2s linear 0.2s,opacity 0.2s linear;
 }
 #nav li:hover ul{
-    display: block;
+    visibility:visible;
+    opacity:1;
+    transition-delay:0s;
 }
 #nav li a{
     font: 20px/1.8 'Source Sans Pro', sans-serif;
     font-weight: 400;
+    padding: 10px 10px 14px;
 }
 #nav ul li{
     background-color: #666;
     padding: 0 15px 0;
+}
+#nav ul a{
+    padding: 5px;
 }
 #nav ul li:hover{
     background-color: #464547;
@@ -91,16 +110,4 @@
     float: left;
     width: 48px;
     height: 60px;
-}
-.search a{
-/*    background: url('../img/icons/find.png');*/
-    background-color: #8E244D;
-}
-.cart{
-/*    background: url('../img/icons/cart.png');*/
-    background-color: #1A9CB0;
-}
-.login{
-/*    background: url('../img/icons/login.png');*/
-    background-color: #7F993A;
 }
