--- a/css/header.css
+++ b/css/header.css
@@ -117,7 +117,7 @@
     border: 0px;
     float: left;
     height: 44px;
-    width: 0px;
+    width: 0;
     margin-top: 8px;
 }
 
@@ -127,7 +127,7 @@
 }
 
 .search-field:focus {
-    
+    outline: 0;
 }
 
 .search-field {
